src/routes/upload/UploadSchematicPage.css
.upload {
	position: relative;

	width: 100%;
	height: 100%;

	display: flex;
	justify-content: center;
	align-items: center;
}

.preview-container {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;

	justify-content: center;

	gap: 0.5rem;

	height: 100%;
	width: 100%;

	overflow: hidden auto;
	padding: 2rem;
}

.upload-code-area {
	height: 2rem;
	resize: none;
	background-color: var(--black);
	border: 2px solid var(--white);
	border-radius: 5px;
	outline: none;
}

.upload-description-container {
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;

	justify-content: center;

	gap: 1rem;
}

.preview-image-container {
	display: flex;
	flex-direction: column;
	justify-content: center;
	flex-wrap: nowrap;
	gap: 5px;
}

.preview-image {
	max-width: min(256px, 100vw);

	min-width: var(--preview-image-min-size);
	min-height: var(--preview-image-min-size);

	background-color: var(--black);
	border: 2px solid var(--white);
	border-radius: 2px;

	display: flex;
	text-align: center;
	align-items: center;
	justify-content: center;
}

#ufb {
	display: none;
}

